; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/emulex/benet/extr_be_ethtool.c_be_read_dump_data.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/emulex/benet/extr_be_ethtool.c_be_read_dump_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.be_adapter = type { i32 }

@LANCER_FW_DUMP_FILE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.be_adapter*, i32, i8*)* @be_read_dump_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @be_read_dump_data(%struct.be_adapter* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.be_adapter*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.be_adapter* %0, %struct.be_adapter** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.be_adapter*, %struct.be_adapter** %4, align 8
  %9 = call i64 @lancer_chip(%struct.be_adapter* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %3
  %12 = load %struct.be_adapter*, %struct.be_adapter** %4, align 8
  %13 = load i32, i32* @LANCER_FW_DUMP_FILE, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @lancer_cmd_read_file(%struct.be_adapter* %12, i32 %13, i32 %14, i8* %15)
  store i32 %16, i32* %7, align 4
  br label %22

17:                                               ; preds = %3
  %18 = load %struct.be_adapter*, %struct.be_adapter** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @be_cmd_get_fat_dump(%struct.be_adapter* %18, i32 %19, i8* %20)
  store i32 %21, i32* %7, align 4
  br label %22

22:                                               ; preds = %17, %11
  %23 = load i32, i32* %7, align 4
  ret i32 %23
}

declare dso_local i64 @lancer_chip(%struct.be_adapter*) #1

declare dso_local i32 @lancer_cmd_read_file(%struct.be_adapter*, i32, i32, i8*) #1

declare dso_local i32 @be_cmd_get_fat_dump(%struct.be_adapter*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
